--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+
+
+</head>
+<body>
+
+
+<nav class="navbar">
+  <p class="navbar-text">hieu</p>
+    <a href="#" class="navbar-text">Resume</a>
+
+
+</nav>
+
+<div class="container">
+
+  <h3>About.</h3>
+    <h1>Matthieu Oliveira</h1>
+  <p>I'm a Data Engineer based in Cambridge Ma. I like working with all types of data.</p>
+
+
+</div>
+
+
+
+</body>
+
+</html>
