--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 <nav class="navbar">
-  <p class="navbar-text">hieu</p>
+  <p class="navbar-text"><b>hieu</b></p>
     <a href="#" class="navbar-text">Resume</a>
 
 
@@ -24,8 +24,7 @@
 
   <h3>About.</h3>
     <h1>Matthieu Oliveira</h1>
-  <p>I'm a Data Engineer based in Cambridge Ma. I like working with all types of data.</p>
-
+  <p>I'm a Data Engineer based in Cambridge Massachusetts and programming is my creative outlet. </p>
 
 </div>
 
