comment out graph. working locally but live is displaying wrong data.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h1>Matthieu Oliveira</h1>
 
   <p>I'm a Data Engineer based in Cambridge Massachusetts and programming is my creative outlet. </p>
-    <div class="dendrogram"></div>
+    <!-- <div class="dendrogram"></div> -->
 </div>
 
 </body>
