Add readme + testing out yellow color theme.

--- a/index.html
+++ b/index.html
@@ -7,40 +7,19 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <style>
-
-.node circle {
-  fill: #fff;
-  stroke: steelblue;
-  stroke-width: 1.5px;
-}
-
-.node {
-  font: 10px sans-serif;
-}
-
-.link {
-  fill: none;
-  stroke: #ccc;
-  stroke-width: 1.5px;
-}
-
-</style>
-
 
 </head>
 <body>
 
-
 <nav class="navbar">
   <p class="navbar-text"><b>hieu</b></p>
-    <a href="#" class="navbar-text">Resume</a>
+   <!--  <a href="#" class="navbar-text">Resume</a> -->
 </nav>
 
 <div class="container">
 
   <h3>About.</h3>
-    <h1>Matthieu Oliveira</h1>
+    <h1>Matt<font color="yellow">hi</font>eu Oliveira</h1>
 
   <p>I'm a Data Engineer based in Cambridge Massachusetts and programming is my creative outlet. </p>
     <div class="dendrogram"></div>
